--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,15 @@
     <body>
         <main>
             <header id="publicheader">
-				<span id="logo"><img src="img/logo.png"></span>
+                <span id="logo"><img src="img/logo.png"></span>
+                
 				<nav id="publicnavigationbar"></nav>
-			</header>
+            
+            </header>
             <section id="content">Content</section> 
         </main>
         <script src="js/menu.js"></script>
+        <script src="js/article.js"></script>
     </body>
 </html>
 
