--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" href="../misc/favicon.ico" type="image/x-icon">
@@ -16,8 +17,9 @@
             </header>
             <section id="content">Content</section> 
         </main>
+        <script src="js/articles.js"></script>
         <script src="js/menu.js"></script>
-        <script src="js/article.js"></script>
+        <!-- <script src="js/publicClientController.js"></script> -->
     </body>
 </html>
 
