--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <main>
-        <form id="loginform" method="post" action="/login">
+        <form id="loginform" method="post" action="/login" enctype="multipart/form-data">
                 <h4>Login påkrævet</h4>
                 
                 
