--- a/admin/index.html
+++ b/admin/index.html
@@ -24,9 +24,9 @@
         </nav>
         <section id="content">Vælg fra menuen til venstre</section>
     </main>
-    <script src="js/articles.js"></script>
     <script src="js/users.js"></script>
-    <script src="js/categories.js"></script>
+    <script src="js/articles.js"></script>
     <script src="js/menuclick.js"></script>
+    <!-- <script src="js/adminClientController.js"></script> -->
 </body>
 </html>
